[package]
name = "azimnth-equidistant-cmap-core"
version = "1.0.0-alpha.2"
edition = "2024"

[lib]
name = "aec_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
imageproc = "0.25.0"
libm = "0.2.15"
rayon = "1.11.0"
shapefile = "0.7.0"
